# scene_aware

./: .gitignore  .gitmessage.txt  .gitmodules  CMakeLists.txt  README.md
applications/: CMakeLists.txt
applications/printing_goodbye_world/: CMakeLists.txt  main.cpp
applications/printing_hello_world/: CMakeLists.txt  main.cpp
applications/scene_aware_main/: CMakeLists.txt  main.cpp
applications/string_printer/: CMakeLists.txt  main.cpp
assets/: doxyfile.in
cmake/common/: add_subdirectories.cmake  configure_subdirectory.cmake  convert_to_uppercase_with_underscores.cmake
cmake/core/directory/: add_subdirectories.cmake  configure_subdirectory.cmake
cmake/core/string/: convert_to_uppercase_with_underscores.cmake
cmake/doxygen/: create_doxygen_target.cmake  find_target_directories.cmake
cmake/interface/: configure_doxygen.cmake  configure_executable.cmake  configure_formatter.cmake  configure_library.cmake  configure_project.cmake  configure_static_analysis.cmake  configure_tests.cmake
cmake/module/application/: add_application_module.cmake
cmake/module/common/: add_target_dependencies.cmake  get_module_project_name.cmake  set_target_compile_properties.cmake
cmake/module/test/: add_category_tests.cmake  add_test_module.cmake  add_test_suite.cmake  create_test_executable.cmake
cmake/project/: configure_default_compiler_flags.cmake  configure_makefile_verbosity.cmake  initialize_project_paths.cmake  print_project_summary.cmake
cmake/test/: check_code_coverage.cmake  register_test_case.cmake
documents/guidelines/cmake/: coding_styles.md
documents/guidelines/doxygen/: coding_styles.md  parameters.md
documents/guidelines/test/: coding_style.md
executables/: print_math_result.cpp
include/example/math/: add.hpp  subtract.hpp
libraries/: CMakeLists.txt
libraries/inference/: CMakeLists.txt
libraries/inference/include/inference/core/: config.hpp  infer.hpp
libraries/inference/include/inference/types/: types.hpp
libraries/inference/src/inference/core/: infer.cpp  infer_impl.cpp  infer_impl.hpp
libraries/inference/test/: CMakeLists.txt
libraries/inference/test/unit/: infer.cpp
libraries/math/: CMakeLists.txt
libraries/math/include/math/: add.hpp
libraries/math/src/: add.cpp
libraries/math/test/unit/: add.cpp
libraries/string_utils/: CMakeLists.txt
libraries/string_utils/include/string_utils/: trim.hpp
libraries/string_utils/src/: trim.cpp
libraries/string_utils/test/unit/: trim.cpp
libraries/utils/: CMakeLists.txt
libraries/utils/include/utils/: print.hpp
libraries/utils/src/: print.cpp
scripts/: CMakeLists.txt
scripts/executable/: init.sh  split_train_valid.sh  train_yolov8.py
scripts/executables/: run_formatter.sh  run_project.sh  run_static_analysis.sh
scripts/install/os/macos/: install_doxygen.sh  install_gcovr.sh
scripts/install/os/ubuntu/: install_clang.sh  install_clang_tidy.sh  install_doxygen.sh  install_gcovr.sh
scripts/setup/: setup_python_env.sh
scripts/train/: build_tensorrt.py  build_tensorrt_engine.py  export_onnx.py  extract_frame.py  train_scene_classifier.py
scripts/train/train/: export_onnx_resnet18.py  split_train_valid.sh
source/example/math/: add.cpp  subtract.cpp
tests/integration/: arithmetic.cpp
tests/unit/math/: add.cpp  subtract.cpp
